--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
+    "cypress": "^3.3.1",
     "mapbox-gl": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open":"cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
